tests/testfiles/validated/invalid_programs/609_double_declaration.c
int main()
{
    int abc;
    int abc;
}